[project]
name = "kleine"
version = "0.1.0"
description = ""
authors = [
    {name = "Xavi"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pillow (>=12.0.0,<13.0.0)",
    "pyxavi (>=1.3.0)",
    "python-dotenv (>=1.1)"
]

[tool.poetry.scripts]
main = "runner:run"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
