[project]
name = "kleine"
version = "0.1.0"
description = ""
authors = [
    {name = "Xavi"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"


[tool.poetry.dependencies]
python = "^3.11"
pyxavi = "^1.2.0"
python-dotenv = "^1.1"
spidev = [{version="^3.7", markers="sys_platform=='linux'"}]
"rpi-lgpio" = [{version="^0.6", markers="sys_platform=='linux'"}]
pygame = "^2.6.1"
pillow = "^11.2.1"
sounddevice = "^0.5.2"

[tool.poetry.scripts]
main = "runner:run"
sound_devices = "runner:query_sound_devices"
pygame_devices = "runner:pygame_devices"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
